--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body>
+  <body onload="loaded()">
     <script src="script.js"></script>
+    <canvas width="640" height="480"></canvas>
   </body>
 </html>
