--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body onload="loaded()">
     <script src="script.js"></script>
-    <canvas width="640" height="480"></canvas>
+    <canvas width="640" height="480" id="cvs">
+      Your browser does not support HTML5 canvas to run this game! Please try using a different browser or upgrade your current one!
+      <a href="https://jsgame.hpd1155.repl.co/canvas.log">logs</a>
+    </canvas>
   </body>
 </html>
